feat: add photo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="assets/svg/icon.ico">
 </head>
 <body>
-    
+    <img src="assets/img/photo.png" alt="my photo">
 </body>
 </html>
