--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
 
     <footer>
         <div class="container">
-
+            <p>Created in 2022</p>
+            <a href="https://github.com/wecansur">Vladimir Kobelev</a>
+            <a href="https://rs.school/js/">
+                <img src="assets/svg/rs_school_js.svg" alt="RSS" width="121" height="45">
+            </a>
         </div>
     </footer>
     
