feat: add navigation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,34 @@
 <body>
     <header>
         <div class="container">
-
+            <nav class="nav">
+                <ul>
+                    <li>
+                        <a href="#contacts">Contacts</a>
+                    </li>
+                    <li>
+                        <a href="#summary">Summary</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#code">Code Example</a>
+                    </li>
+                    <li>
+                        <a href="#courses">Courses</a>
+                    </li>
+                    <li>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#education">Education</a>
+                    </li>
+                    <li>
+                        <a href="#languages">Languages</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
