--- a/index.html
+++ b/index.html
@@ -57,9 +57,15 @@
                 <ul>
                     <li>Location: Irkutsk, Russia</li>
                     <li>Phone: +7-902-512-25-34</li>
-                    <li>E-mail: <a href="mailto:vlkob95@gmail.com">vlkob95@gmail.com</a></li>
-                    <li>Telegram: <a href="https://t.me/wecansur">@wecansur</a></li>
-                    <li>GitHub: <a href="https://github.com/wecansur">wecansur</a></li>
+                    <li>E-mail:
+                        <a href="mailto:vlkob95@gmail.com">vlkob95@gmail.com</a>
+                    </li>
+                    <li>Telegram:
+                        <a href="https://t.me/wecansur">@wecansur</a>
+                    </li>
+                    <li>GitHub:
+                        <a href="https://github.com/wecansur">wecansur</a>
+                    </li>
                     <li>Discord RSS: Vladimir Kobelev (@wecansur)</li>
                 </ul>    
             </section>
