feat: make footer down

--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
 
     <footer>
         <div class="container">
+            <div>
             <p>Created in 2022</p>
             <a href="https://github.com/wecansur">Vladimir Kobelev</a>
+            </div>
             <a href="https://rs.school/js/">
                 <img src="assets/svg/rs_school_js.svg" alt="RSS" width="121" height="45">
             </a>
