--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <nav class="nav">
-                <ul>
+                <ul class="nav-list">
                     <li>
                         <a href="#contacts">Contacts</a>
                     </li>
@@ -132,10 +132,8 @@
 
     <footer>
         <div class="container">
-            <div>
             <p>Created in 2022</p>
             <a href="https://github.com/wecansur">Vladimir Kobelev</a>
-            </div>
             <a href="https://rs.school/js/">
                 <img src="assets/svg/rs_school_js.svg" alt="RSS" width="121" height="45">
             </a>
