--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li>
-                        <a href="#contacts">Contacts</a>
+                        <a href="#contacts" class="nav-link">Contacts</a>
                     </li>
                     <li>
-                        <a href="#summary">Summary</a>
+                        <a href="#summary" class="nav-link">Summary</a>
                     </li>
                     <li>
-                        <a href="#skills">Skills</a>
+                        <a href="#skills" class="nav-link">Skills</a>
                     </li>
                     <li>
-                        <a href="#code">Code Example</a>
+                        <a href="#code" class="nav-link">Code Example</a>
                     </li>
                     <li>
-                        <a href="#courses">Courses</a>
+                        <a href="#courses" class="nav-link">Courses</a>
                     </li>
                     <li>
-                        <a href="#projects">Projects</a>
+                        <a href="#projects" class="nav-link">Projects</a>
                     </li>
                     <li>
-                        <a href="#education">Education</a>
+                        <a href="#education" class="nav-link">Education</a>
                     </li>
                     <li>
-                        <a href="#languages">Languages</a>
+                        <a href="#languages" class="nav-link">Languages</a>
                     </li>
                 </ul>
             </nav>
