--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container main-container">
             <section class="section" id="profile">
                 <img src="assets/img/photo.png" alt="my photo">
                 <div>
