fix: make foto smaller

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <div class="container main-container">
             <section class="section" id="profile">
-                <img src="assets/img/photo.png" alt="my photo">
+                <img src="assets/img/photo.png" alt="my photo" width="200" height="219.3">
                 <div>
                     <h1>Vladimir Kobelev</h1>
                     <h3>Junior Front-End Developer</h3>
