fix: remove contact links underline

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                     <li>Location: Irkutsk, Russia</li>
                     <li>Phone: +7-902-512-25-34</li>
                     <li>E-mail:
-                        <a href="mailto:vlkob95@gmail.com">vlkob95@gmail.com</a>
+                        <a href="mailto:vlkob95@gmail.com" class="contact-link">vlkob95@gmail.com</a>
                     </li>
                     <li>Telegram:
-                        <a href="https://t.me/wecansur">@wecansur</a>
+                        <a href="https://t.me/wecansur" class="contact-link">@wecansur</a>
                     </li>
                     <li>GitHub:
-                        <a href="https://github.com/wecansur">wecansur</a>
+                        <a href="https://github.com/wecansur" class="contact-link">wecansur</a>
                     </li>
                     <li>Discord RSS: Vladimir Kobelev (@wecansur)</li>
                 </ul>    
