fix: make photo and title separate sections

--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
 
     <main>
         <div class="container main-container">
-            <section class="section" id="profile">
+            <section class="section" id="profile-photo">
                 <img src="assets/img/photo.png" alt="my photo" width="200" height="219.3">
-                <div>
+            </section>
+
+            <section class="section" id="profile-title">
                     <h1>Vladimir Kobelev</h1>
                     <h3>Junior Front-End Developer</h3>
-                </div>
             </section>
-    
+            
             <section class="section" id="contacts">
                 <h2>Contacts</h2>
                 <ul>
