--- a/index.html
+++ b/index.html
@@ -133,8 +133,11 @@
 
     <footer>
         <div class="container">
-            <p>Created in 2022</p>
-            <a href="https://github.com/wecansur">Vladimir Kobelev</a>
+            <div>
+                Created in 2022 by
+                <a href="https://github.com/wecansur">Vladimir Kobelev</a>
+            </div>
+            
             <a href="https://rs.school/js/">
                 <img src="assets/svg/rs_school_js.svg" alt="RSS" width="121" height="45">
             </a>
