--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <main>
         <div class="container main-container">
-            <section class="section" id="profile-photo">
-                <img src="assets/img/photo.png" alt="my photo" width="200" height="219.3">
-            </section>
+            <div class="section" id="profile-photo">
+                <img src="assets/img/photo.png" alt="my photo" width="200" height="219">
+            </div>
 
             <section class="section" id="profile-title">
                     <h1>Vladimir Kobelev</h1>
