feat: organize footer positioning

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </main>
 
     <footer>
-        <div class="container">
+        <div class="container footer-container">
             <div>
                 Created in 2022 by
                 <a href="https://github.com/wecansur">Vladimir Kobelev</a>
