feat: colrize header and footer, add footer padding

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/svg/icon.ico">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
@@ -131,7 +131,7 @@
         
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="container footer-container">
             <div>
                 Created in 2022 by
