--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             
             <a href="https://rs.school/js/">
-                <img src="assets/svg/rs_school_js.svg" alt="RSS" width="121" height="45">
+                <img src="assets/img/rss.png" alt="RSS" width="121" height="45">
             </a>
         </div>
     </footer>
