fix: change links color

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container footer-container">
             <div>
                 Created in 2022 by
-                <a href="https://github.com/wecansur">Vladimir Kobelev</a>
+                <a href="https://github.com/wecansur" class="footer-link">Vladimir Kobelev</a>
             </div>
             
             <a href="https://rs.school/js/">
