--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <footer class="footer">
         <div class="container footer-container">
-            <div>
+            <div class="footer-created">
                 Created in 2022 by
                 <a href="https://github.com/wecansur" class="footer-link">Vladimir Kobelev</a>
             </div>
