--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
     <main>
         <div class="container main-container">
-            <div class="section" id="profile-photo">
+            <div class="section">
                 <img src="assets/img/photo.png" alt="my photo" width="200" height="219">
             </div>
 
-            <section class="section" id="profile-title">
-                    <h1>Vladimir Kobelev</h1>
-                    <h3>Junior Front-End Developer</h3>
+            <section class="section">
+                    <h1 class="title">Vladimir Kobelev</h1>
+                    <h3 class="subtitle">Junior Front-End Developer</h3>
             </section>
             
             <section class="section" id="contacts">
