feat: add project

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     
             <section class="section" id="projects">
                 <h2>Projects</h2>
-                <p>TBD</p>
+                <a href="https://wecansur.github.io/rsschool-cv/" class="project-link">CV</a>
             </section>
     
             <section class="section" id="education">
