feat: add code background

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section class="section" id="code">
                 <h2>Code Example</h2>
                 <p>Solution for sign task at codewars:</p>
-                <pre>
+                <pre class="snippet">
                     <code>
                         function multiply (a, b) {
                                 return a * b
