refactor: update courses

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             <section class="section" id="courses">
                 <h2>Courses</h2>
                 <ul>
-                    <li>"JavaScript/Front-end" stage 0 (in progress)</li>
+                    <li>"JavaScript/Front-end" stage 0</li>
+                    <li>"JavaScript/Front-end" stage 1 (in progress)</li>
                 </ul>
             </section>
     
