--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
             </section>
             <section class="section" id="summary">
                 <h2>Summary</h2>
-                <p>
-                    I worked as university teacher of russian language as foreign, but decide to build career in other sphere.
-                    I have big interest in learning new skills.
-                    I`m obsessed with activities that require deep immersion and teamwork so I decide to become a frontend developer.
-                </p>
+                <p>I worked as university teacher of russian language as foreign, but decide to build career in other sphere. I have big interest in learning new skills. I`m obsessed with activities that require deep immersion and teamwork so I decide to become a frontend developer.</p>
             </section>
             <section class="section" id="skills">
                 <h2>Skills</h2>
