feat: update projects

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
             </section>
             <section class="section" id="projects">
                 <h2>Projects</h2>
-                <a href="https://wecansur.github.io/rsschool-cv/" class="link">CV</a>
+                <a href="https://rolling-scopes-school.github.io/wecansur-JSFEPRESCHOOL2022Q2/travel/">Travel</a>
+                <a href="https://rolling-scopes-school.github.io/wecansur-JSFEPRESCHOOL2022Q2/momentum/">Momentum</a>
+                <a href="https://wecansur.github.io/codejam-eldritch/">Eldritch Horror helprer-shuffler (Code Jam project)</a>
             </section>
             <section class="section" id="education">
                 <h2>Education</h2>
