--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <section class="section" id="courses">
                 <h2>Courses</h2>
                 <ul>
-                    <li>"JavaScript/Front-end" stage 0</li>
-                    <li>"JavaScript/Front-end" stage 1 (in progress)</li>
+                    <li>The Rolling Scopes School, "JavaScript/Front-end" stage 0</li>
+                    <li>The Rolling Scopes School, "JavaScript/Front-end" stage 1 (in progress)</li>
                 </ul>
             </section>
             <section class="section" id="projects">
