fix: fix phone link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Contacts</h2>
                 <ul>
                     <li>Location: Tel Aviv, Israil</li>
-                    <li>Phone: <a href: "tel:972532731494"972532731494</a></li>
+                    <li>Phone: <a href: "tel:972532731494" class="link">972532731494</a></li>
                     <li>E-mail:
                         <a href="mailto:vlkob95@gmail.com" class="link">vlkob95@gmail.com</a>
                     </li>
