--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Contacts</h2>
                 <ul>
                     <li>Location: Tel Aviv, Israil</li>
-                    <li>Phone: <a href: "tel:972532731494" class="link">972532731494</a></li>
+                    <li>Phone: <a href: "tel:972532731494" class="link phone-link">972532731494</a></li>
                     <li>E-mail:
                         <a href="mailto:vlkob95@gmail.com" class="link">vlkob95@gmail.com</a>
                     </li>
@@ -91,7 +91,7 @@
                 <h2>Code Example</h2>
                 <p>Solution of codewars kata <a href="https://www.codewars.com/kata/54b42f9314d9229fd6000d9c" class="link">Duplicate Encoder</a>:</p>
                 <pre class="snippet">
-                    <code>
+                    <code class="code-example">
                         function duplicateEncode(word){
                           let result = '';
                           const upperCaseWord = word.toUpperCase();
