--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
                 <h2>Skills</h2>
                 <ul>
                     <li>HTML</li>
-                    <li>CSS</li>
+                    <li>CSS, SASS</li>
+                    <li>JavaScript</li>
                     <li>Git, GitHub</li>
                     <li>VS Code</li>
+                    <li>Figma</li>
                 </ul>
             </section>
             <section class="section" id="code">
