--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ function duplicateEncode(word){
     return array.indexOf(item) !== index;
   })
   for (let i = 0; i < upperCaseWord.length; i++) {
-    (unUnicChars.includes(upperCaseWord[i])) ? result += ')' : result += '(';
+    const curChar = upperCaseWord[i];
+    (unUnicChars.includes(curChar)) ? result += ')' : result += '(';
   }
   return result;
 }
