--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <section class="section" id="skills">
                 <h2>Skills</h2>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS, SASS</li>
+                    <li>HTML5</li>
+                    <li>CSS3, SASS</li>
                     <li>JavaScript</li>
                     <li>Git, GitHub</li>
                     <li>VS Code</li>
