feat: make cv adaptive until 700px

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <div class="container main-container">
             <div class="section">
-                <img src="assets/img/photo.png" alt="my photo" width="200" height="219">
+                <img src="assets/img/photo.png" alt="my photo" width="200" height="219" class="photo">
             </div>
 
             <section class="section">
@@ -55,7 +55,7 @@
                 <h2>Contacts</h2>
                 <ul>
                     <li>Location: Tel Aviv, Israil</li>
-                    <li>Phone: <a href: "tel:+972532731494" class="link phone-link">972532731494</a></li>
+                    <li>Phone: <a href="tel:972532731494" class="link phone-link">972532731494</a></li>
                     <li>E-mail:
                         <a href="mailto:vlkob95@gmail.com" class="link">vlkob95@gmail.com</a>
                     </li>
@@ -71,7 +71,7 @@
             <section class="section" id="summary">
                 <h2>Summary</h2>
 
-                <p>
+                <p class="summary">
                     I worked as university teacher of russian language as foreign, but decide to build career in other sphere.
                     I have big interest in learning new skills.
                     I`m obsessed with activities that require deep immersion and teamwork so I decide to become a frontend developer.
