feat: make burger-menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="assets/svg/icon.ico">
 </head>
 <body>
+    <div class="pop-up-cover"></div>
     <header class="header">
         <div class="container">
             <nav class="nav">
@@ -38,6 +39,27 @@
                         <a href="#languages" class="nav-link">Languages</a>
                     </li>
                 </ul>
+                <div class="burger-container">
+                    <img src="/assets/svg/burger.svg" alt="burger" class="burger">
+                </div>
+                <div class="burger-menu">
+                    <div class="dash-container">
+                        <div class="dash dash-part1"></div>
+                        <div class="dash dash-part2"></div>
+                    </div>
+                    <nav class="burger-nav-section">
+                        <ul class="burger-nav-list">
+                            <li class="nav-item"><a href="#contacts" class="nav-link burger-link">Contacts</a></li>
+                            <li class="nav-item"><a href="#summary" class="nav-link burger-link">Summary</a></li>
+                            <li class="nav-item"><a href="#skills" class="nav-link burger-link">Skills</a></li>
+                            <li class="nav-item"><a href="#code" class="nav-link burger-link">Code example</a></li>
+                            <li class="nav-item"><a href="#courses" class="nav-link burger-link">Courses</a></li>
+                            <li class="nav-item"><a href="#projects" class="nav-link burger-link">Projects</a></li>
+                            <li class="nav-item"><a href="#education" class="nav-link burger-link">Education</a></li>
+                            <li class="nav-item"><a href="#languages" class="nav-link burger-link">Languages</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </nav>
         </div>
     </header>
@@ -150,5 +172,6 @@ function duplicateEncode(word){
             </a>
         </div>
     </footer>
+    <script src="/script.js"></script>
 </body>
 </html>
