feat: make cv adaptive to 389px

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3 class="subtitle">Junior Front-End Developer</h3>
             </section>
             <section class="section" id="contacts">
-                <h2>Contacts</h2>
+                <h2 class="section-title">Contacts</h2>
                 <ul>
                     <li>Location: Tel Aviv, Israil</li>
                     <li>Phone: <a href="tel:972532731494" class="link phone-link">972532731494</a></li>
@@ -91,9 +91,9 @@
                 </ul>
             </section>
             <section class="section" id="summary">
-                <h2>Summary</h2>
+                <h2 class="section-title">Summary</h2>
 
-                <p class="summary">
+                <p class="summary text">
                     I worked as university teacher of russian language as foreign, but decide to build career in other sphere.
                     I have big interest in learning new skills.
                     I`m obsessed with activities that require deep immersion and teamwork so I decide to become a frontend developer.
@@ -101,8 +101,8 @@
 
             </section>
             <section class="section" id="skills">
-                <h2>Skills</h2>
-                <ul>
+                <h2 class="section-title">Skills</h2>
+                <ul class="text">
                     <li>HTML5</li>
                     <li>CSS3, SASS</li>
                     <li>JavaScript</li>
@@ -112,8 +112,8 @@
                 </ul>
             </section>
             <section class="section" id="code">
-                <h2>Code Example</h2>
-                <p>Solution of codewars kata <a href="https://www.codewars.com/kata/54b42f9314d9229fd6000d9c" class="link">Duplicate Encoder</a>:</p>
+                <h2 class="section-title">Code Example</h2>
+                <p class="text">Solution of codewars kata <a href="https://www.codewars.com/kata/54b42f9314d9229fd6000d9c" class="link">Duplicate Encoder</a>:</p>
                 <pre class="snippet">
                     <code class="code-example">
 function duplicateEncode(word){
@@ -133,27 +133,27 @@ function duplicateEncode(word){
                 </pre>
             </section>
             <section class="section" id="courses">
-                <h2>Courses</h2>
-                <ul>
+                <h2 class="section-title">Courses</h2>
+                <ul class="text">
                     <li>The Rolling Scopes School, "JavaScript/Front-end" stage 0</li>
                     <li>The Rolling Scopes School, "JavaScript/Front-end" stage 1 (in progress)</li>
                 </ul>
             </section>
             <section class="section" id="projects">
-                <h2>Projects</h2>
-                <ul>
+                <h2 class="section-title">Projects</h2>
+                <ul class="text">
                     <li><a href="https://rolling-scopes-school.github.io/wecansur-JSFEPRESCHOOL2022Q2/travel/" class="link">Travel</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/wecansur-JSFEPRESCHOOL2022Q2/momentum/" class="link">Momentum</a></li>
                     <li><a href="https://wecansur.github.io/codejam-eldritch/" class="link">Eldritch Horror helprer-shuffler (Code Jam project)</a></li>
                 </ul>
             </section>
             <section class="section" id="education">
-                <h2>Education</h2>
-                <p>Irkutsk State University, bachelor, Philology (russian language and russian literature)</p>
+                <h2 class="section-title">Education</h2>
+                <p class="text">Irkutsk State University, bachelor, Philology (russian language and russian literature)</p>
             </section>
             <section class="section" id="languages">
-                <h2>Languages</h2>
-                <ul>
+                <h2 class="section-title">Languages</h2>
+                <ul class="text">
                     <li>Russian - native</li>
                     <li>English - B1</li>
                     <li>Polish - A2</li>
@@ -163,7 +163,7 @@ function duplicateEncode(word){
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="footer-created">
+            <div class="footer-created" class="text">
                 Created in 2022 by
                 <a href="https://github.com/wecansur" class="link footer-link">Vladimir Kobelev</a>
             </div>
