fix: fix burger-icon and script src

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
                 <div class="burger-container">
-                    <img src="/assets/svg/burger.svg" alt="burger" class="burger">
+                    <img src="assets/svg/burger.svg" alt="burger" class="burger">
                 </div>
                 <div class="burger-menu">
                     <div class="dash-container">
@@ -172,6 +172,6 @@ function duplicateEncode(word){
             </a>
         </div>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
